--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "gh-pages": "^2.0.1"
+    "gh-pages": "2.0.1"
   },
   "browserslist": {
     "production": [
